Comment some pages

--- a/_posts/2020-03-01-features.md
+++ b/_posts/2020-03-01-features.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 
 title: Jekyll Garden Features
 
@@ -26,4 +26,4 @@ Want to have a seperate home page instead of the feed? (Like [my personal websit
 You can install Jekyll garden to a URL path, or a sub path (example.com/digitalgarden). To do that, just configure baseurl at  `_config.yml`
 
 ###### Private files using .gitignore
-Not a theme feature, but if you want to publish part of your obsidian, it's easy. Just create two folders inside `_notes` (Say Public and Private), and use Gitignore to stop syncing your pirvate files with Github! 
+Not a theme feature, but if you want to publish part of your obsidian, it's easy. Just create two folders inside `_notes` (Say Public and Private), and use Gitignore to stop syncing your pirvate files with Github!  -->
