--- a/_posts/2020-03-01-how-to.md
+++ b/_posts/2020-03-01-how-to.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: Install and Setup
 ---
 
@@ -78,4 +78,4 @@ If you want to know my workflow or Obsidian folder structure, check [here]()
 - Check [Features](../post/features) to know theme features
 
 ## Credits
-- Check [[Credits]]
+- Check [[Credits]] -->
